# relexi

./: .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  README.md  local_modules.sh  p9_modules.sh  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
docs/: .gitignore  build_docs.sh  syntax-highlighting.css  theme.css
examples/Channel_24DOF/: prm.yaml  prm_hawk.yaml
examples/Channel_24DOF/simulation_files/: Re180_turbulentChannel_State_0000012.000000000.h5  Re180_turbulentChannel_State_0000013.000000000.h5  Re180_turbulentChannel_State_0000014.000000000.h5  Re180_turbulentChannel_State_0000015.000000000.h5  parameter_flexi.ini
examples/HIT_24_DOF/: README.md  jobfile.pbs  jobfile.slurm  prm.yaml  prm_eval.yaml  prm_train.yaml
examples/HIT_24_DOF/simulation_files/: CART_HEX_PERIODIC_004_mesh.h5  DNS_spectrum_stats_t2_to_t10.csv  parameter_flexi.ini  parameter_flexi_eval.ini  run_f200_N5_4Elems_State_0000003.000000000.h5  run_f200_N5_4Elems_State_0000004.000000000.h5  (+3 more)
examples/HIT_32_DOF/: prm.yaml
relexi/: __init__.py
relexi/env/: __init__.py  flexiEnvSmartSim.py
relexi/io/: output.py  readin.py
relexi/rl/: __init__.py  models.py  tf_helpers.py
relexi/rl/ppo/: __init__.py  (+1 more)
relexi/runtime/: __init__.py  helpers.py  launch_configuration.py  runtime.py
relexi/scripts/: relexi_cli.py
src/: flexiEnvSmartSim.py  init_smartsim.py  models.py  readin.py  relexi.py  sod_env.py  train.py
src/relexi/: cluster_manager.py
tests/: context.py  test_env_flexi.py  test_helpers.py  test_launch_configuration.py  test_readin.py  test_runtime.py
(+38 files in other folders)
