[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "relexi"
version = "2.0.0"
authors = [
	"Marius Kurz <marius.kurz@cwi.nl>",
	"Philipp Offenhäuser",
	"Andrea Beck",
	"Dominic Viola"
]
description = "A reinforcement learning library for simulation environments on high-performance computing systems."
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://flexi-framework.github.io/relexi/"
repository = "https://github.com/flexi-framework/relexi/"
documentation = "https://flexi-framework.github.io/relexi/"
keywords = ["reinforcement learning", "machine learning", "high-performance computing", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
smartsim = ">=0.4,<0.7"
smartredis = "*"
tensorflow = ">=2.15,<2.16"
tf-agents = "*"
cmake = "*"
pyyaml = "*"
matplotlib = "*"
setuptools = "!=70.*" # Known bugs
# Dev dependencies
# TODO: Proper handling of dev-deps
pdoc = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
relexi = "relexi.scripts.relexi_cli:main"
